// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Temp component test renders as expected 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Component>
    Temporary Page
  </Component>
</Component>
`;

exports[`Temp renders without crashing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Text>
    Temporary Page
  </Text>
</View>
`;
